Test mutual tls / auth, #2